gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23710.d
version https://git-lfs.github.com/spec/v1
oid sha256:88dff47729617141edea837ae6797c7cfef1f71da72ad1ee4149e9f2fa499960
size 668
